$Id: ChangeLog,v 1.214 2007-12-03 00:01:36 cmatsuoka Exp $

Stable versions
---------------

2.5.1 ():
	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
	- Winamp plugin number of channels fixed by Mirko Buffoni
	- recognize TakeTracker TDZ4 modules (reported by Lorence Lombardo)
	- fix crash in anticlick when pan amplitude is set to 100% (reported
	  by Mirko Buffoni)
	- extend playable octave range (fixes replay of octave 9 notes in
	  beek-my_eleventh_year.it, reported by Mirko Buffoni)
	- Protracker-style sample loops only valid with loop start 0 (fixes
	  M.K. Amegas conversion and others, reported by Mirko Buffoni)
	- reset fadeout on new instrument fetch (fixes echo in "pain of lace"
	  pat 0 ch 2-3, reported by Mirko Buffoni)
	- add quirk for simultaneous volume slide up and down (M.K. allows it
	  but S3M doesn't, fixes Red Dream.mod reported by Ralf Hoffmann)
	- Impulse Tracker in sample mode has instrument priority quirk
	- fix IT far right (64) stereo channel panning
	- merge Amiga port improvements by Johan Samuelsson
	- merge Amiga xfdmaster.library support by Chris Young 
	- Amiga port also buildable for AROS (AHI driver not tested)
	- fix global track parsing in DMF loader (fixes mok-trea.dmf, reported
	  by Lorence Lombardo)
	- fix Winamp plugin to use the equalizer (reported by Mirko Buffoni)

2.5.0 (20071127):
	- remove DMP-specific effect from MOD loader
	- extend Protracker sample loops to Noisetracker and Startrekker
	- FLT loader recognizes Startrekker FLTM modules (only PCM channels)
	- implement support for Startrekker/ADSC AM synth instruments
	- fixed cast to signed type in finetune display
	- fixed Protracker 3 IFFMODL loader (process VERS chunk manually)
	- added support to Protracker sample loops in the Protracker 3 loader
	- added PulseAudio driver (using the simple API)
	- remove restrictive tests for Soundtracker modules (fixes
	  99redballoons.mod and atmosfer4.mod, reported by Adric Riedel)